--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
       <a href="product.html"><button>Log In</button></a>
         <div class="forgot-password">
-            Forgot password?
+            <a href="product_create.html">Forgot password?</a>
         </div>
     </div>
 </body>
