--- a/cart.html
+++ b/cart.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: aqua;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+        }
+        .container{
+            width: 300px;
+            padding: 20px; /* Adds some space inside */
+            text-align: center; /* Centers text inside */
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-       <img>
        <h4>Apple Macbook M4</h4>
        <h6>Apple Products</h6>
        <p>Apple have the best products in the world</p>
