--- a/account.html
+++ b/account.html
@@ -66,12 +66,12 @@
             transform: scale(1.02);
             outline: none;
         }
-          .button {
+         .button {
             display: inline-block;
             width: 100%;
             padding: 12px;
             background-color: white;
-            color: #ff6347;
+            color: #130a09;
             font-size: 1rem;
             font-weight: 600;
             border: none;
